--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Kanban board</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
       <div class="column">
           <h2 class="column-title">{{ name }}</h2>
           <ul id={{ id }} class="column-card-list"></ul>
-          <button class="btn-delete"><i class="fas fa-times-circle"></i></button>
+          <button class="btn-delete">X</button>
           <button class="add-card">Add a card</button>
       </div>
   </script>
@@ -26,8 +26,8 @@
   <script id="card-template" type="x-tmpl-mustache">
     <div class="card">
       <p class="card-description">{{ description }}</p>
-      <button class="btn-delete"><i class="fas fa-times-circle"></i></button>
-    </div
+      <button class="btn-delete">X</button>
+    </div>
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
